<resources>
    <string name="app_name">Android Academy</string>
    <string name="hello_world">Hello World!</string>
    <string name="back_button">Back</string>
    <string name="age_moc">13+</string>
    <string name="film_name_moc">Avengers: End Game</string>
    <string name="genre_moc">Action, Adventure, Fantasy</string>
    <string name="reviews_moc">125 reviews</string>
    <string name="storyline">Storyline</string>
    <string name="storyline_moc">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="actor_first_moc">Robert Downey Jr.</string>
    <string name="actor_second_moc">Chris Evans</string>
    <string name="actor_third_moc">Mark Ruffalo</string>
    <string name="actor_fourth_moc">Chris Hemsworth</string>
    <string name="movie_list_title">Movies list</string>
    <string name="duration_moc">137 min</string>
</resources>