<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.activities.MovieDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        tools:context=".ui.activities.MovieDetailsActivity">

        <ImageView
            android:id="@+id/backgroundPoster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="@drawable/poster_mask"
            android:scaleType="centerCrop"
            android:src="@drawable/poster_moc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="60dp"
            android:drawablePadding="8dp"
            android:text="@string/back_button"
            android:textAlignment="center"
            android:textColor="@color/back_button"
            app:drawableStartCompat="@drawable/ic_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="154dp"
            android:background="@drawable/age_background"
            android:padding="2dp"
            android:text="@string/age_moc"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backButton" />

        <TextView
            android:id="@+id/filmName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/film_name_moc"
            android:textColor="@color/main_text_color"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/genreView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/genre_moc"
            android:textColor="@color/genre_and_rating"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filmName" />

        <com.aids61517.easyratingview.EasyRatingView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:emptyDrawable="@drawable/star_empty"
            app:fullDrawable="@drawable/star_full"
            app:layout_constraintBottom_toBottomOf="@+id/reviews"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/reviews"
            app:numStars="5"
            app:rating="4"
            app:spacing="4dp"
            app:step="0.1" />

        <TextView
            android:id="@+id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/reviews_moc"
            android:textAllCaps="true"
            android:textColor="@color/additional_text_color"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/rating"
            app:layout_constraintTop_toBottomOf="@+id/genreView" />

        <TextView
            android:id="@+id/storylineTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/storyline"
            android:textColor="@color/main_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reviews" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/storyline_moc"
            android:textColor="@color/additional_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/storylineTitle" />

        <TextView
            android:id="@+id/castTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/cast"
            android:textColor="@color/main_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/storyline" />

        <ImageView
            android:id="@+id/actorFirst"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/actor_first"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toStartOf="@+id/actorSecond"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/castTitle" />

        <TextView
            android:id="@+id/actorFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/actor_first_moc"
            android:textColor="@color/main_text_color"
            app:layout_constraintEnd_toEndOf="@+id/actorFirst"
            app:layout_constraintStart_toStartOf="@+id/actorFirst"
            app:layout_constraintTop_toBottomOf="@id/actorFirst" />

        <ImageView
            android:id="@+id/actorSecond"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/actor_second"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toStartOf="@+id/actorThird"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/actorFirst"
            app:layout_constraintTop_toBottomOf="@id/castTitle" />

        <TextView
            android:id="@+id/actorSecondName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/actor_second_moc"
            android:textColor="@color/main_text_color"
            app:layout_constraintEnd_toEndOf="@+id/actorSecond"
            app:layout_constraintStart_toStartOf="@+id/actorSecond"
            app:layout_constraintTop_toBottomOf="@id/actorSecond" />

        <ImageView
            android:id="@+id/actorThird"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/actor_third"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toStartOf="@+id/actorFourth"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/actorSecond"
            app:layout_constraintTop_toBottomOf="@id/castTitle" />

        <TextView
            android:id="@+id/actorThirdName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/actor_third_moc"
            android:textColor="@color/main_text_color"
            app:layout_constraintEnd_toEndOf="@+id/actorThird"
            app:layout_constraintStart_toStartOf="@+id/actorThird"
            app:layout_constraintTop_toBottomOf="@id/actorThird" />

        <ImageView
            android:id="@+id/actorFourth"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/actor_fourth"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/actorThird"
            app:layout_constraintTop_toBottomOf="@id/castTitle" />

        <TextView
            android:id="@+id/actorFourthName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/actor_fourth_moc"
            android:textColor="@color/main_text_color"
            app:layout_constraintEnd_toEndOf="@+id/actorFourth"
            app:layout_constraintStart_toStartOf="@+id/actorFourth"
            app:layout_constraintTop_toBottomOf="@id/actorFourth" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>