<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:paddingBottom="8dp"
    android:paddingEnd="2dp"
    android:paddingStart="2dp"
    android:paddingTop="2dp"
    android:background="@drawable/ic_item_list_background"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/poster"
        android:adjustViewBounds="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="@drawable/mask_on_poster_list"
        android:scaleType="centerInside"
        android:src="@drawable/poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/age_background"
        android:gravity="center"
        android:text="@string/age_moc"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/like"
        android:layout_width="16dp"
        android:layout_height="14dp"
        android:layout_gravity="right"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_not_favorite"
        app:layout_constraintEnd_toEndOf="@+id/poster"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/genre_moc"
        android:textColor="@color/colorAccent"
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@+id/reviews"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/poster" />

    <com.aids61517.easyratingview.EasyRatingView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="12dp"
        app:emptyDrawable="@drawable/ic_start_empty_small"
        app:fullDrawable="@drawable/ic_start_full_small"
        app:layout_constraintBottom_toBottomOf="@+id/poster"
        app:layout_constraintStart_toStartOf="parent"
        app:numStars="5"
        app:rating="4"
        app:spacing="2dp"
        app:step="0.1" />

    <TextView
        android:id="@+id/reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical"
        android:text="@string/reviews_moc"
        android:textColor="@color/colorPrimary"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rating"
        app:layout_constraintStart_toEndOf="@+id/rating"
        app:layout_constraintTop_toTopOf="@+id/rating" />

    <TextView
        android:id="@+id/moviesName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/film_name_moc"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poster" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/duration_moc"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/moviesName" />
</androidx.constraintlayout.widget.ConstraintLayout>